Inicio del proyecto en angular

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
-
 <body>
-    <app-home/>
-    <router-outlet></router-outlet>
+    <header>
+        <app-nav/>
+    </header>
+    <h1>Componente Home</h1>
+    
 </body>
-
 </html>
