--- a/src/components/inscripcion/inscripcion.component.html
+++ b/src/components/inscripcion/inscripcion.component.html
@@ -1,14 +1,2 @@
 <p>inscripcion works!</p>
-<table>
-    <tr>
-      <td>Codigo</td><td>Nombre</td><td>Año</td><td>Cuatrimestre</td>
-    </tr>
-    @for(curso of cursos;track curso.id) {
-    <tr>
-      <td>{{curso.codigoCurso}}</td>
-      <td>{{curso.nombreCurso}}</td>
-      <td>{{curso.anio}}</td>
-      <td>{{curso.cuatrimestre}}</td>
-    </tr>
-  }
-  </table>
+<app-formulario></app-formulario>
