--- a/src/components/formulario/formulario.component.html
+++ b/src/components/formulario/formulario.component.html
@@ -1,27 +1,25 @@
 <form [formGroup]="datoForm" (ngSubmit)="onSubmit()">
-    <div formGroupName="empresa">
-        <h3>Empresas Disponibles</h3>
-        <select formControlName="nombre">
-            @for(emp of empresas;track emp.id){
-            <option>{{emp.nombre}}</option>
-            }
-        </select>
-        <!--        <select formControlName="nombre">
-            <option *ngFor="let emp of empresas" [value]="emp.id">{{emp.nombre}}</option>
-        </select>
-        -->
+    <div formGroupName="persona">
+        <h3>Información Personal</h3>
+        <label for="nombre">Nombre:</label>
+        <input type="text" formControlName="nombre" class="form-control">
+        <br />
+        <label for="apellido">Apellido:</label>
+        <input type="text" formControlName="apellido" class="form-control">
+        <br />
+        <label for="dni">Número de Documento:</label>
+        <input type="number" formControlName="dni" class="form-control">
+        <br />
     </div>
-    <div formGroupName="destino">
-        <label for="ciudadOrigen">Ciudad de Partida</label>
-        <input id="origen" type="text" formControlName="ciudadOrigen">
-        <br/>
-        <h3>Destinos Disponibles</h3>
-        <select formControlName="ciudadDestino">
-            @for(ciudad of ciudades;track ciudad.id){
-                <option>{{ciudad.nombre}}</option>
-            }
-        </select>
-    </div>
-    <button type="button" (click)="onClick()">Verificar</button>
-    <button type="submit" [disabled]="!datoForm.valid">Siguiente</button>
+    <label for="curso">Curso:</label>
+    <select id="curso" formControlName="curso" class="form-control">
+        @for(curso of cursos; track curso.id){
+            <option>{{ curso.codigoCurso }}</option>
+            <option>{{ curso.nombreCurso }}</option>
+            <option>{{ curso.anio }}</option>
+            <option>{{ curso.cuatrimestre }}</option>
+        }
+    </select>
+    <button type="button" (click)="onClick()" class="btn btn-secondary m-1">Verificar</button>
+    <button type="submit" [disabled]="!datoForm.valid" class="btn btn-primary m-1">Siguiente</button>
 </form>
