--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -5,5 +5,6 @@
         <li><a href="#">Iniciar Sesión</a></li>
         <li><a routerLink="/tecnicatura">Tecnicatura</a></li>
         <li><a routerLink="/alumno">Alumno</a></li>
+        <li><a routerLink="/cursos">Cursos</a></li>
     </ul>
 </nav>
