upd,add en models,services,pages

--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -1,9 +1,8 @@
 <nav>
     <h1 class="itemLogo">Logo</h1>
     <ul class="itemUl">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Iniciar Sesión</a></li>
-        <li><a routerLink="/tecnicatura">Tecnicatura</a></li>
+        <li><a routerLink="/inscripcion">Inscripcion</a></li>
+        <li><a routerLink="/login">Iniciar Sesión</a></li>
         <li><a routerLink="/alumno">Alumno</a></li>
         <li><a routerLink="/cursos">Cursos</a></li>
     </ul>
