--- a/src/components/inscripcion/inscripcion.component.html
+++ b/src/components/inscripcion/inscripcion.component.html
@@ -1,2 +1,3 @@
 <p>inscripcion works!</p>
-<app-formulario></app-formulario>
+<app-formulario (formularioEnviado)="obtenerDatosFormulario($event)"></app-formulario>
+@if(estadoBtn){<button type="submit" class="btn btn-secondary">Enviar</button>}
