--- a/src/components/formulario/formulario.component.html
+++ b/src/components/formulario/formulario.component.html
@@ -13,6 +13,7 @@
     </div>
     <label for="curso">Curso:</label>
     <select id="curso" formControlName="curso" class="form-control">
+        <option defaultValue="">Seleccionar</option>
         @for(curso of cursos; track curso.id){
         <option>{{ curso.codigoCurso +',' + curso.nombreCurso +','+ curso.anio +',' +curso.cuatrimestre}}</option>
         }
