--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,3 +1,4 @@
+<p>login works!</p>
 <form [formGroup]="dataForm" (ngSubmit)="onSubmit()">
     <div formGroupName="usuario">
         <h3>Información Login</h3>
@@ -12,3 +13,6 @@
     <button type="submit" class="btn btn-primary m-1">Enviar</button>
     <button type="submit" class="btn btn-secondary m-1" routerLink="/registroForm">Registrarce</button>
 </form>
+<h3>{{tokenAccess}}</h3>
+<h3>{{tokenInvalidAccess}}</h3>
+
